--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleApp</title>
+  <title>Michael Irschick</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<nav>
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <!-- <li>work</li> -->
+    <li>Contact</li>
+  </ul>
+</nav>
 <%= yield %>
+<footer>
+  &copy; 2016 Michael Irschick
+</footer>
 
 </body>
 </html>
