--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,4 +8,12 @@
 -->
 <h1>Welcome to Bike Oakland</h1>
 <h2>Your source for used bikes in Oakland</h2>
+<h3>Contact Michael Irschick</h2>
+
+<h3>Image: No options</h2>
+<%= image_tag("kitten.png") %>
+<h3>Image: added options</h2>
+<%= image_tag("kitten.png", class: "img-responsive my-image") %>
+<h3>Image: even more options</h2>
+<%= image_tag("kitten.png", width: '32', height: '32', alt: 'cute kitten', class: "img-responsive") %>
 
