--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,77 @@
 <html>
 <head>
   <title>Michael Irschick</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar">
 
-<nav>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container-fluid" id="navfluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigationbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div class="home navbar-brand">
+        <a href="#">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+      </div>
+    </div>
+    <div class="navbar-collapse collapse" id="navigationbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">About <i class="fa fa-code" aria-hidden="true"></i></a></li>
+        <li><a href="#contact">Contact <i class="fa fa-comments" aria-hidden="true"></i></a> </li>
+        <li><a href="#faq">FAQ  <i class="fa fa-question-circle-o" aria-hidden="true"></i></a></li>
+        <li><a href="#work">Work <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
+        <li><a href="#new">New Stuff <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
+        <li><a href="#jquery">Jquery<i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+<!-- <nav>
   <ul>
     <li>Home</li>
     <li>About</li>
-    <!-- <li>work</li> -->
     <li>Contact</li>
   </ul>
 </nav>
+ -->
 <%= yield %>
-<footer>
-  &copy; 2016 Michael Irschick
-</footer>
+<footer class="footer navbar-bottom">
+      <nav>
+        <div class="footerDiv">
+          <div class="row">
+            <div class="footerCell">
+              <!-- <li><i class="fa-li fa fa-spinner fa-spin"></i>as bullets</li> -->
+              &copy;2016 Bike Oakland<i class="fa fa-spinner fa-spin"></i> 
+            </div>
+            <!-- <div id="map"></div> -->
+            <div class="footerCell">
+              <a href="https://twitter.com/irschick" class="twitter-follow-button" data-show-count="false">Follow @irschick</a>
+            </div>
+            <div class="footerCell">
+              <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </footer>  
 
+<!-- <footer>
+  &copy; 2016 Bike Oakland
+</footer>
+ -->
 </body>
 </html>
