--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <script src="https://use.fontawesome.com/ade38bac0c.js"></script>
+  <!--<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">-->
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".navbar">
