--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,31 +1,21 @@
 <p id="notice"><%= notice %></p>
 
+<br><br><br><br>
 <h1>Listing Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
-
 <%= link_to 'New Product', new_product_path %>
+<br><br>
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-2 col-md-4">
+        <h1><%= product.name %></h1>
+        <p><%= product.description %></p>
+        <p>Color: <%= product.colour %></p>
+        <strong>Price: $ 42</strong>
+        <%= image_tag(product.image_url, class: "img-responsive") %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
