--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,13 +3,13 @@
 <br><br><br><br>
 <h1>Listing Products</h1>
 <br>
-<%= link_to 'New Product', new_product_path %>
+<%= link_to image_tag("addProduct.png", border: 0), new_product_path %>
 <br><br>
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
       <div class="col-sm-2 col-md-4">
-        <h1><%= product.name %></h1>
+        <h1><%= product.name %></h1><%= link_to image_tag("editProduct.png", border: 0), edit_product_path(product) %>
         <p><%= product.description %></p>
         <p>Color: <%= product.colour %></p>
         <strong>Price: $ 42</strong>
