Added png files

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Product</h1>
-
+<br><br>
+<h1>Edit Product</h1>
 <%= render 'form' %>
+<%= link_to image_tag("showProduct.png", border: 0),  @product %> |
+<%= link_to image_tag("allProducts.png", border: 0), products_path  %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
