--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,3 @@
 <h1>New Product</h1>
-
 <%= render 'form' %>
-
-<%= link_to 'Back', products_path %>
+<%= link_to image_tag("allProducts.png", border: 0), products_path  %>
