--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.text_field :image_url %>
   </div>
   <div class="field">
-    <%= f.label :colour %><br>
+    <%= f.label :color %><br>
     <%= f.text_field :colour %>
   </div>
   <div class="actions">
