--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,39 @@
 <p id="notice"><%= notice %></p>
+<br><br>
+<h1>Product</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-2 col-md-4">
+      <h1><%= @product.name %></h1>
+      <p><%= @product.description %></p>
+      <p>Color: <%= @product.colour %></p>
+      <strong>Product Price: $ 42</strong>
+      <%= image_tag(@product.image_url, class: "img-responsive") %>
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+<!--<p>-->
+  <!--<strong>Name:</strong>-->
+  <!--<%= @product.name %>-->
+<!--</p>-->
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+<!--<p>-->
+  <!--<strong>Description:</strong>-->
+  <!--<%= @product.description %>-->
+<!--</p>-->
 
-<p>
-  <strong>Color:</strong>
-  <%= @product.colour %>
-</p>
+<!--<p>-->
+  <!--<strong>Image url:</strong>-->
+  <!--<%= @product.image_url %>-->
+<!--</p>-->
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<!--<p>-->
+  <!--<strong>Color:</strong>-->
+  <!--<%= @product.colour %>-->
+<!--</p>-->
+
+<%= link_to image_tag("editProduct.png", border: 0), edit_product_path(@product) %> |
+<%= link_to image_tag("allProducts.png", border: 0), products_path  %> |
+<%= link_to image_tag("addProduct.png", border: 0), new_product_path %>
