Cleaned up menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,12 @@
         <span class="icon-bar"></span>
       </button>
       <div class="home navbar-brand">
-        <a href="#">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+        <a href="/">Home <i class="fa fa-home" aria-hidden="true"></i></a>
       </div>
     </div>
     <div class="navbar-collapse collapse" id="navigationbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">About <i class="fa fa-code" aria-hidden="true"></i></a></li>
-        <li><a href="#contact">Contact <i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-        <li><a href="#faq">FAQ  <i class="fa fa-question-circle-o" aria-hidden="true"></i></a></li>
-        <li><a href="#work">Work <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
-        <li><a href="#new">New Stuff <i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
-        <li><a href="#jquery">Jquery<i class="fa fa-share-alt" aria-hidden="true"></i></a></li>
+        <li><a href="/products">Products <i class="fa fa-code" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </div>
