--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,53 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.btn-primary {
+  //width: 80px;
+  //height: 25px;
+  //font-size: 10px;
+  //text-align: center;
+  //border-radius: 3px;
+}
+
+.thumbnail {
+  border: 1;
+  border-bottom: 1px solid #c5c5c5;
+  -webkit-box-shadow: 0px 0px 2px 0px rgba(50, 50, 50, 0.14);
+  -moz-box-shadow: 0px 0px 2px 0px rgba(50, 50, 50, 0.14);
+  box-shadow: 0px 0px 2px 0px rgba(50, 50, 50, 0.14);
+  border-radius: 0px;
+}
+
+.thumbnail {
+  margin-bottom: 10px;
+}
+
+.thumbnail {
+  position: relative;
+}
+
+.thumbnail {
+  /* padding: 4px; */
+  line-height: 1.428571429;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.thumbnail .product-image {
+  width: 100%;
+}
+img {
+  vertical-align: middle;
+}
+img {
+  border: 0;
+}
