--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/ade38bac0c.js"></script>
-  <!--<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">-->
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".navbar">
@@ -126,6 +125,17 @@
     </div>
   </div>
 </nav>
+
+
+<div class="container">
+  <div class="col-sm-8 col-sm-offset-2 text-center">
+    <ul class="list-inline center-block">
+      <li><a href="https://www.facebook.com/michael.irschick"><img src="/assets/facebook.png"></a></li>
+      <li><a href="https://twitter.com/irschick"><img src="/assets/twitter.png"></a></li>
+      <li><a href="https://plus.google.com/+MichaelIrschickSF"><img src="/assets/googleplus.png"></a></li>
+    </ul>
+  </div><!--/col-->
+</div><!--/container-->
 
 <!--<nav class="navbar navbar-inverse navbar-bottom" role="navigation">-->
   <!--<div class="container-fluid" id="navfluid">-->
