--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,2 +1,76 @@
 <h2>Featured Product:</h2>
-<%= @featured_product.name %>
+
+<header class="masthead">
+  <!--<div id="myCarousel" class="carousel slide">-->
+    <!--<ol class="carousel-indicators">-->
+      <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
+      <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
+      <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
+    <!--</ol>-->
+    <!--<div class="carousel-inner">-->
+      <!--<div class="item active">-->
+        <!--<img src="/assets/bike.png">-->
+        <!--<div class="container">-->
+          <!--<div class="carousel-caption">-->
+            <!--<h2>Road Bikes</h2>-->
+            <!--<p></p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="item">-->
+        <!--<img src="/assets/bike.png">-->
+        <!--<div class="container">-->
+          <!--<div class="carousel-caption">-->
+            <!--<h2>Mountain Bikes</h2>-->
+            <!--<p></p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="item">-->
+        <!--<img src="/assets/bike.png">-->
+        <!--<div class="container">-->
+          <!--<div class="carousel-caption">-->
+            <!--<h2>Equipment</h2>-->
+            <!--<p></p>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="logo">The Firm</div>-->
+    <!--&lt;!&ndash; Controls &ndash;&gt;-->
+    <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev">-->
+      <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
+    <!--</a>-->
+    <!--<a class="right carousel-control" href="#myCarousel" data-slide="next">-->
+      <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
+    <!--</a>-->
+  <!--</div>-->
+
+  <div id="myCarousel" class="carousel slide">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <h2><% puts @products.count %></h2>
+    <div class="carousel-inner" role="listbox">
+      <% @products.each do |product| %>
+          <div class="item<%= " active" if product == @products.first %>">
+            <%= image_tag(product.image_url) %>
+            <div class="carousel-caption">
+              <%= product.name %>
+            </div>
+          </div>
+      <% end %>
+    </div>
+
+    <div class="logo">The Firm</div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+</header>
