--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,58 +1,12 @@
 <h2>Featured Product:</h2>
 
 <header class="masthead">
-  <!--<div id="myCarousel" class="carousel slide">-->
-    <!--<ol class="carousel-indicators">-->
-      <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
-      <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
-      <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
-    <!--</ol>-->
-    <!--<div class="carousel-inner">-->
-      <!--<div class="item active">-->
-        <!--<img src="/assets/bike.png">-->
-        <!--<div class="container">-->
-          <!--<div class="carousel-caption">-->
-            <!--<h2>Road Bikes</h2>-->
-            <!--<p></p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="item">-->
-        <!--<img src="/assets/bike.png">-->
-        <!--<div class="container">-->
-          <!--<div class="carousel-caption">-->
-            <!--<h2>Mountain Bikes</h2>-->
-            <!--<p></p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="item">-->
-        <!--<img src="/assets/bike.png">-->
-        <!--<div class="container">-->
-          <!--<div class="carousel-caption">-->
-            <!--<h2>Equipment</h2>-->
-            <!--<p></p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="logo">The Firm</div>-->
-    <!--&lt;!&ndash; Controls &ndash;&gt;-->
-    <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev">-->
-      <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-    <!--</a>-->
-    <!--<a class="right carousel-control" href="#myCarousel" data-slide="next">-->
-      <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-    <!--</a>-->
-  <!--</div>-->
-
-  <div id="myCarousel" class="carousel slide">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <% @products.each do |p, i| %>
+          <li data-target="#image-carousel" data-slide-to="#{i}" class="#{'active' if i == 0}"></li>
+      <% end %>
     </ol>
-    <h2><% puts @products.count %></h2>
     <div class="carousel-inner" role="listbox">
       <% @products.each do |product| %>
           <div class="item<%= " active" if product == @products.first %>">
@@ -63,14 +17,13 @@
           </div>
       <% end %>
     </div>
-
-    <div class="logo">The Firm</div>
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
     </a>
   </div>
 </header>
