added new root route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,58 +30,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/products">Products <i class="fa fa-code" aria-hidden="true"></i></a></li>
       </ul>
-    </div>
-  </div>
-</nav>
-<%= yield %>
-<!--<footer class="footer navbar-bottom">-->
-  <!--<nav>-->
-    <!--<div class="footerDiv">-->
-      <!--<div class="row">-->
-        <!--<div class="footerCell">-->
-          <!--&copy;2016 Bike Oakland<i class="fa fa-spinner fa-spin"></i>-->
-        <!--</div>-->
-        <!--<div class="footerCell">-->
-          <!--<a href="https://twitter.com/irschick" class="twitter-follow-button" data-show-count="false">Follow @irschick</a>-->
-        <!--</div>-->
-        <!--<div class="footerCell">-->
-          <!--<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</nav>-->
-<!--</footer>-->
-
-<nav class="navbar navbar-inverse navbar-bottom" role="navigation">
-  <div class="container-fluid" id="navfluid">
-    <div class="navbar-footer">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigationbarFooter">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <div class="navbar-collapse collapse" id="navigationbarFooter">
-      <ul class="nav navbar-nav">
-        <div class="row">
-          <div class="col-md-2 col-md-3 col-lg-4">
-            <li><a href="https://twitter.com/irschick" class="fa fa-twitter" data-show-count="false">Follow @irschick</a></li>
-          </div>
-          <div class="col-sm-2 col-md-3 col-lg-4">
-            <li><a href="https://www.linkedin.com/in/michaelirschick" class="fa fa-linkedin" data-show-count="false"> LinkedIn</a></li>
-          </div>
-          <div class="col-sm-2 col-md-3 col-lg-4">
-            <li>&copy;2016 Bike Oakland<i class="fa fa-spinner fa-spin"></i>
-          </div>
-        </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/static_pages/about">About Us <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </div>
 </nav>
-
-
+<%= yield %>
 <div class="container">
   <div class="col-sm-8 col-sm-offset-2 text-center">
     <ul class="list-inline center-block">
@@ -92,139 +47,6 @@
   </div><!--/col-->
 </div><!--/container-->
 
-<!--<nav class="navbar navbar-inverse navbar-bottom" role="navigation">-->
-  <!--<div class="container-fluid" id="navfluid">-->
-    <!--<div class="navbar-footer">-->
-      <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigationbarBottom">-->
-        <!--<span class="sr-only">Toggle navigation</span>-->
-        <!--<span class="icon-bar"></span>-->
-        <!--<span class="icon-bar"></span>-->
-        <!--<span class="icon-bar"></span>-->
-      <!--</button>-->
-    <!--</div>-->
-    <!--<div class="navbar-collapse collapse" id="navigationbarBottom">-->
-      <!--<ul class="nav navbar-nav navbar-left">-->
-        <!--<li><a href="https://twitter.com/irschick" class="fa fa-twitter" data-show-count="false">Follow @irschick</a></li>-->
-        <!--<li><a href="https://www.linkedin.com/in/michaelirschick" class="fa fa-linkedin" data-show-count="false"> LinkedIn</a></li>-->
-        <!--<li>&copy;2016 Bike Oakland<i class="fa fa-spinner fa-spin"></i>-->
-      <!--</ul>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
-
-<!--<div id="footer">-->
-  <!--<div class="container">-->
-    <!--<div class="row">-->
-      <!--<div class="col-sm-3">-->
-        <!--<div class="foot-header">-->
-          <!--Acerca de Nosotros <img src="http://200.27.156.170/ean_default/img/cocha/icon-cocha.png">-->
-        <!--</div>-->
-        <!--<div class="foot-links">-->
-          <!--<a href="http://internet.cocha.com/nuestra-empresa/nuestra-empresa.html">Nuestra Empresa</a>-->
-          <!--<a href="http://cms.cocha.com/sucursales.html">Sucursales</a>-->
-          <!--<a href="http://internet.cocha.com/_DisenoWeb/minisitios/sitio/por-que-comprar-en-cocha.html?cid=por-que-comprar-en-cocha">Por qué comprar en Cocha</a>-->
-          <!--<a href="http://internet.cocha.com/virgin_galactic/virgin_galactic.html">Virgin Galactic</a>-->
-          <!--<a href="http://internet.cocha.com/_DisenoWeb/minisitios/sitio/trabaja-con-nosotros.html?cid=trabaja_en_cocha">Trabaja con nosotros</a>-->
-          <!--<a href="http://www.cochainbound.com/" target="_blank">¿Vienes a Chile?</a>-->
-        <!--</div>-->
-      <!--</div>&lt;!&ndash;/col-sm-3&ndash;&gt;-->
-      <!--<div class="col-sm-3">-->
-        <!--<div class="foot-header"> Servicio al cliente <img src="http://200.27.156.170/ean_default/img/cocha/servicio-al-cliente-icon.png"></div>-->
-        <!--<div class="foot-links">-->
-          <!--<a href="javascript:Contacto()">Contáctanos</a>-->
-          <!--<a href="http://internet.cocha.com/_DisenoWeb/minisitios/sitio/servicio-al-pasajero.html?cid=atencion-al-pasajero">Atención al pasajero</a>-->
-          <!--<a href="http://internet.cocha.com/_DisenoWeb/minisitios/sitio/faq.html?cid=preguntas-frecuentes">Preguntas frecuentes</a>-->
-          <!--<a href="http://cms.cocha.com/terminos-y-condiciones">Términos y Condiciones Generales</a>-->
-          <!--<a href="http://internet.cocha.com/_DisenoWeb/check-in/check-in.html?cid=check-in-on-line">Check-in en línea </a>-->
-          <!--<a href="http://www.cocha.com/ibe/bookingManagement/retrieveBookingForm.do">Consultar reserva</a>-->
-          <!--<a href="http://internet.cocha.com/manual-del-viajero.pdf" target="_blank">Manual del viajero</a>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<div class="col-sm-3">-->
-        <!--<div class="foot-header">-->
-          <!--Medios de pago <img src="http://200.27.156.170/ean_default/img/cocha/card-icon.png">-->
-        <!--</div>-->
-        <!--<div class="foot-links">-->
-          <!--<p>-->
-            <!--<i class="fa fa-check text-success"></i> Tarjetas de crédito<br>-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/visa-card.png">-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/master-card.png">-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/dinner-club-card.png">-->
-          <!--</p>-->
-          <!--<p>-->
-            <!--<i class="fa fa-check text-success"></i> Transferencias bancarias<br>-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/banco-santander-card-1.png">-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/banco-de-chile-card-1.png">-->
-          <!--</p>-->
-          <!--<p>-->
-            <!--<i class="fa fa-check text-success"></i> Tarjeta Ripley<br>-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/ripley-card.png">-->
-          <!--</p>-->
-        <!--</div>-->
-      <!--</div>&lt;!&ndash;/col-sm-3&ndash;&gt;-->
-      <!--<div class="col-sm-3">-->
-        <!--<img src="http://200.27.156.170/ean_default/img/cocha/tripadvisor-logo.jpg" class="img-responsive img-thumbnail">-->
-        <!--<br><br>-->
-        <!--<a href="http://internet.cocha.com/especiales/sello-de-calidad-turistica.html" style="float: left;">-->
-          <!--<img src="http://200.27.156.170/ean_default/img/cocha/sello_de_calidad_turistica.png" width="121" height="70" alt="sello de calidad turistica">-->
-        <!--</a>-->
-        <!--<a href="http://www.chileestuyo.cl/" target="_blanck" style="float: left; margin-left: 20px;">-->
-          <!--<img src="http://200.27.156.170/ean_default/img/cocha/Logo_Chileestuyo.png" height="70" alt="Logo Chileestuyo">-->
-        <!--</a>-->
-      <!--</div>-->
-
-    <!--</div>&lt;!&ndash;/row&ndash;&gt;-->
-    <!--<div class="row">-->
-      <!--<center><img src="http://200.27.156.170/ean_default/img/cocha/footer-bg.png"></center>-->
-      <!--<div id="bottom-footer">-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-8">-->
-            <!--<a href="http://www.cocha.com/ibe/common/home.do">Inicio</a>-->
-            <!--<a href="http://cms.cocha.com/vuelos.html">Vuelos</a>-->
-            <!--<a href="http://cms.cocha.com/hoteles?cid=HOTELES">Hoteles</a>-->
-            <!--<a href="http://cms.cocha.com/paquetes.html">Paquetes</a>-->
-            <!--<a href="http://cms.cocha.com/cruceros.html">Cruceros</a>-->
-            <!--<a href="http://autos.cocha.com/">Autos</a>-->
-            <!--<a href="http://cms.cocha.com/otros-productos.html">Otros productos</a>-->
-            <!--<a href="http://cms.cocha.com/destinos.html">Destinos</a>-->
-            <!--<a href="http://internet.cocha.com/_DisenoWeb/minisitios/sitio/viajes-corporativos.html?cid=viajes-corporativos">Empresas</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 phone">-->
-            <!--<img src="http://200.27.156.170/ean_default/img/cocha/phone-icon.png" class="pull-left">-->
-            <!--<div class="pull-left">-->
-              <!--<span class="red">2 2464 1300 <small>Atencion al pasajero</small></span>-->
-            <!--</div>-->
-            <!--<div class="pull-right">-->
-              <!--<span class="red">(56) 2 2464 1200 <small>Emergencia 24 hrs.</small></span>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>&lt;!&ndash;/row 2&ndash;&gt;-->
-      <!--<div class="row" id="final-footer">-->
-        <!--<div class="col-sm-4">-->
-          <!--<img src="http://200.27.156.170/ean_default/img/cocha/RapidSSL_SEAL-90x50.gif">-->
-        <!--</div>-->
-        <!--<div class="col-sm-4 text-center">-->
-          <!--Copyright © 2015 Cocha. All Rights Reserved-->
-          <!--El Bosque Norte 0430, Las Condes, Santiago - Chile-->
-        <!--</div>-->
-        <!--<div class="col-sm-4 text-right">-->
-        	<!--<span class="fa-stack fa-lg">-->
-              <!--<i class="fa fa-circle text-primary fa-stack-2x"></i>-->
-              <!--<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>-->
-            <!--</span>-->
-          <!--<span class="fa-stack fa-lg">-->
-              <!--<i class="fa fa-circle text-info fa-stack-2x"></i>-->
-              <!--<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>-->
-            <!--</span>-->
-          <!--<span class="fa-stack fa-lg">-->
-              <!--<i class="fa fa-circle text-danger fa-stack-2x"></i>-->
-              <!--<i class="fa fa-youtube fa-stack-1x fa-inverse"></i>-->
-            <!--</span>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>&lt;!&ndash;/container&ndash;&gt;-->
-  <!--</div>&lt;!&ndash;/footer&ndash;&gt;</div>-->
 </body>
 </html>
 
