--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,27 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h2>StaticPages#about</h2>
+<div class="container" id="about">
+
+  <div class=”row”>
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <h1>About Us</h1>
+      <img src="/assets/bikestore.png" class="img-responsive" alt="Biking in Oakland">
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <h1>Where to bike</h1>
+      <p>
+        Oakland is considered a great place to ride bikes—it has temperate weather, flat streets, hills and a diverse array of scenery. After Oakland North did a story on 10 great walks in Oakland, we thought a story on five great bike rides in Oakland would be helpful, too.
+      </p>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <h1>Why us</h1>
+      <p>
+        Another reason why it pays to shop local is that your LBS will often give you a discount on any maintenance or accessories that you buy from the shop, if you originally bought your bike from the LBS. A local bike store relies on loyal customers, and they are oftentimes willing to reward you for your continued business. A local bike shop will be familiar with you and your bike, and they can recommend components and equipment that will keep you safe when you are on the road.
+      </p>
+    </div>
+  </div>
+  <div class="col-sm-12">
+    <h3>Our Story</h3>
+    <p>Pork belly godard mustache, normcore disrupt celiac whatever offal migas four dollar toast umami mlkshk health goth fixie skateboard. You probably haven't heard of them austin hella tumblr four dollar toast tofu, readymade kitsch fashion axe marfa keytar blog distillery vinyl chambray. Vinyl lumbersexual blue bottle literally pinterest, schlitz chillwave neutra before they sold out man bun YOLO occupy. YOLO sriracha banh mi XOXO literally. Food truck cornhole listicle mixtape banjo everyday carry, polaroid mustache photo booth vinyl swag williamsburg. Lomo master cleanse selvage, DIY hoodie art party kitsch health goth intelligentsia brunch wolf gastropub four loko man braid. Brooklyn pitchfork biodiesel yuccie, irony meggings helvetica food truck.</p>
+  </div><!-- /col -->
+</div>
+
