--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-2 col-md-4">
+<div class="col-sm-2 col-md-4 col-md-offset-1">
   <%= image_tag(product.image_url, class: "thumbnail img-responsive") %>
   <h1><%= product.name %></h1><%= link_to image_tag("editProduct.png", border: 0), edit_product_path(product) %>
   <p><%= product.description %></p>
