--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
+      <!--<a class="home navbar-brand fa-home" href="/" <i class="fa fa-home" aria-hidden="true"></i> >-->
+      <!--</a>-->
+
       <div class="home navbar-brand">
-        <a href="/">Home <i class="fa fa-home" aria-hidden="true"></i></a>
+        <a href="/">Home <i class="fa fa-bicycle" aria-hidden="true"></i></a>
       </div>
     </div>
     <div class="navbar-collapse collapse" id="navigationbar">
@@ -38,6 +42,7 @@
         </li>
         <li><a href="/products">Products</a></li>
         <li><%= link_to "About Us", static_pages_about_path%></li>
+        <li><%= link_to "Contact Us", static_pages_contact_path%></li>
       </ul>
     </div>
   </div>
