--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,25 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<h1>Contact Us</h1>
+<%= flash[:notice] %>
+<%= form_tag(static_pages_thank_you_path) do %>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <%= label_tag :name %>
+        <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+      </div>
+      <div class="form-group">
+        <%= label_tag :email, "Email Address" %>
+        <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+      </div>
+      <div class="form-group">
+        <%= label_tag :message %>
+        <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+      </div>
+    </div>
+  </div>
+  <button id="whatever" class="btn btn-primary" name="submit" type="submit">
+    <span>Send</span>
+    <i class="icon-ok" style="font-size:20px; vertical-align: middle;"></i>
+  </button>
+  <!--<%= submit_tag "Send" %>-->
+<% end %>
