--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,21 @@
         <li><a href="/products">Products</a></li>
         <li><%= link_to "About Us", static_pages_about_path%></li>
         <li><%= link_to "Contact Us", static_pages_contact_path%></li>
+        <li>
+          <% if user_signed_in? %>
+              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+          <% else %>
+              <%= link_to('Login', new_user_session_path) %>
+          <% end %>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
+
 <div class="container">
   <div class="col-sm-8 col-sm-offset-2 text-center">
     <ul class="list-inline center-block">
