--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="col-xs-4 col-xs-offset-4">
-  <h2>Sign up to Bikes of Oakland</h2>
+<div class="col-xs-6 col-md-4 col-xs-offset-1 col-md-offset-4">
+<h2>Sign up to Bikes of Oakland</h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
