--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,6 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
 
-
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid" id="navfluid">
     <div class="navbar-header">
@@ -59,7 +58,8 @@
 <%= yield %>
 
 <div class="container">
-  <div class="col-sm-8 col-sm-offset-2 text-center">
+  <div class="col-xs-12 col-md-4 col-xs-offset-1 col-md-offset-5">
+    <!--<div class="col-sm-8 col-sm-offset-2 text-center">-->
     <ul class="list-inline center-block">
       <li><a href="https://www.facebook.com/michael.irschick"><img src="/assets/facebook.png"></a></li>
       <li><a href="https://twitter.com/irschick"><img src="/assets/twitter.png"></a></li>
