--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".navbar">
-
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid" id="navfluid">
     <div class="navbar-header">
@@ -21,10 +20,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
       <!--<a class="home navbar-brand fa-home" href="/" <i class="fa fa-home" aria-hidden="true"></i> >-->
       <!--</a>-->
-
       <div class="home navbar-brand">
         <a href="/">Home <i class="fa fa-bicycle" aria-hidden="true"></i></a>
       </div>
@@ -53,8 +50,30 @@
     </div>
   </div>
 </nav>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<!--<p class="notice"><%= notice %></p>-->
+<!--<p class="alert"><%= alert %></p>-->
+
+<% if notice %>
+    <p id="notice" class="alert alert-info"><%= notice %></p>
+<% end %>
+<% if alert %>
+    <p id="alert" class="alert alert-danger"><%= alert %></p>
+<% end %>
+
+<!--<div class="alert alert-success" role="alert">-->
+  <!--<a href="#" class="alert-link">...</a>-->
+<!--</div>-->
+<!--<div class="alert alert-info" role="alert">-->
+  <!--<a href="#" class="alert-link">...</a>-->
+<!--</div>-->
+<!--<div class="alert alert-warning" role="alert">-->
+  <!--<a href="#" class="alert-link">...</a>-->
+<!--</div>-->
+<!--<div class="alert alert-danger" role="alert">-->
+  <!--<a href="#" class="alert-link">...</a>-->
+<!--</div>-->
+
+
 <%= yield %>
 
 <div class="container">
