--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   <script src="https://use.fontawesome.com/ade38bac0c.js"></script>
   <%= csrf_meta_tags %>
 </head>
+<!-- for FF, Chrome, Opera -->
+<link rel="icon" type="image/png" href="/assets/bike.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/assets/bike.png" sizes="32x32">
+
+<!-- for IE -->
+<link rel="icon" type="image/x-icon" href="/assets/bike.png" >
+<link rel="shortcut icon" type="image/x-icon" href="/assets/bike.png"/>
+
 <body data-spy="scroll" data-target=".navbar">
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid" id="navfluid">
