--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 <link rel="icon" type="image/png" href="/assets/bike.png" sizes="32x32">
 
 <!-- for IE -->
-<link rel="icon" type="image/x-icon" href="/assets/bike.png" >
-<link rel="shortcut icon" type="image/x-icon" href="/assets/bike.png"/>
+<!--<link rel="icon" type="image/x-icon" href="/assets/bike.png" >-->
+<!--<link rel="shortcut icon" type="image/x-icon" href="/assets/bike.png"/>-->
 
 <body data-spy="scroll" data-target=".navbar">
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
