--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,6 +58,15 @@ img {
 .panel {
   position:relative;
 }
+
+//div:hover {
+//  border: 1px solid blue;
+//}
+
+//div {
+//  border: 1px solid transparent;
+//}
+
 //
 //.panel>.panel-heading:after,.panel>.panel-heading:before{
 //  position:absolute;
