--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-2 col-md-4 col-md-offset-1">
-  <%= image_tag(product.image_url, class: "thumbnail img-responsive") %>
+  <%= image_tag(product.image_url, class: "img-responsive", size:"300") %>
   <h1><%= product.name %></h1>
   <p><%= product.description %></p>
   <p>Color: <%= product.colour %></p>
