--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -59,13 +59,13 @@ img {
   position:relative;
 }
 
-//div:hover {
-//  border: 1px solid blue;
-//}
+#prod_div:hover {
+  border: 2px solid lightblue;
+}
 
-//div {
-//  border: 1px solid transparent;
-//}
+#prod_div {
+  border: 2px solid transparent;
+}
 
 //
 //.panel>.panel-heading:after,.panel>.panel-heading:before{
